@@ -90,6 +90,10 @@ argonms.game.2.enablecooltime=true
 # (Only matters on high rate servers)
 argonms.game.2.enablemultilevel=false
 
+# Scrolling message that is sent to all connected clients and is displayed at
+# the very top of the game window. Leave blank to have no ticker line at all.
+argonms.game.2.tickermessage=
+
 # Persistent events. Unlike events such as party quests which only consume
 # server resources when players enter them, these events are always running in
 # the background from server startup to shutdown. Each channel on this game
